Fix custom logos potentially overflowing container: * Adjust logo.php if conditional to split it from the .logo anchor tag * Adjust style.css to account for header/footer .logo and header/footer .custom-logo-link.

--- a/style.css
+++ b/style.css
@@ -250,19 +250,18 @@ header {
 	top: 0;
 	z-index: 50;
 }
-header .logo {
+header .logo, header .custom-logo-link {
 	display: flex;
 	margin-right: 1rem;
-
-	.custom-logo-link {
-		display: inline-flex;
-	}
 
 	img {
 		flex-grow: 0;
 		height: 48px;
 		width: auto;
 	}
+}
+header .custom-logo-link {
+	display: inline-flex;
 }
 header nav ul {
 	display: flex;
@@ -308,7 +307,7 @@ footer {
   flex-direction: column;
   gap: 2rem;
 }
-footer .logo {
+footer .logo, footer .custom-logo-link {
 	align-self: center;
 
 	img {
